@@ -18,6 +18,7 @@ import org.modelmapper.ModelMapper;
 import org.springframework.security.crypto.password.PasswordEncoder;
 
 import com.DriveAway.project.dto.AuthResponseDTO;
+import com.DriveAway.project.dto.ForgotPasswordDTO;
 import com.DriveAway.project.dto.UserDTO;
 import com.DriveAway.project.dto.UserResponseDTO;
 import com.DriveAway.project.exception.UserAlreadyExistsException;
@@ -25,7 +26,6 @@ import com.DriveAway.project.exception.UserNotFoundException;
 import com.DriveAway.project.model.Address;
 import com.DriveAway.project.model.User;
 import com.DriveAway.project.repository.UserRepository;
-import com.DriveAway.project.dto.ForgotPasswordDTO;
 
 public class UserServiceImplTest {
 
@@ -90,13 +90,21 @@ public class UserServiceImplTest {
         userResponseDTO.setMobileNumber("9876543210");
         userResponseDTO.setAltMobileNumber("8765432109");
 
+        UserResponseDTO.AddressDTO addressDTO = new UserResponseDTO.AddressDTO();
+        addressDTO.setStreet("New Street");
+        addressDTO.setCity("New City");
+        addressDTO.setState("New State");
+        addressDTO.setPostalCode("123456");
+        addressDTO.setCountry("New Country");
+        userResponseDTO.setAddress(addressDTO);
+
         forgotPasswordDTO = new ForgotPasswordDTO();
         forgotPasswordDTO.setEmail("testuser@example.com");
         forgotPasswordDTO.setNewPassword("NewPassword123");
     }
 
     @Test
-    @DisplayName("Test for registering a new user")
+    @DisplayName("Register new user - success")
     public void givenUserDTO_whenRegisterUser_thenReturnSavedUser() {
         when(userRepository.findByEmail(userDTO.getEmail())).thenReturn(Optional.empty());
         when(passwordEncoder.encode(anyString())).thenReturn("encryptedPassword");
@@ -106,110 +114,138 @@ public class UserServiceImplTest {
 
         assertThat(savedUser).isNotNull();
         assertThat(savedUser.getEmail()).isEqualTo(userDTO.getEmail());
-        verify(userRepository, times(1)).save(any(User.class));
     }
 
     @Test
-    @DisplayName("Test for registering a user with existing email")
+    @DisplayName("Register user - email already exists")
     public void givenExistingEmail_whenRegisterUser_thenThrowException() {
         when(userRepository.findByEmail(userDTO.getEmail())).thenReturn(Optional.of(user));
-
         assertThrows(UserAlreadyExistsException.class, () -> userServiceImpl.registerUser(userDTO));
     }
 
     @Test
-    @DisplayName("Test for getting all users")
+    @DisplayName("Get all users")
     public void whenGetAllUsers_thenReturnUserList() {
-        List<User> users = Arrays.asList(user);
-        when(userRepository.findAll()).thenReturn(users);
-        when(modelMapper.map(any(User.class), eq(UserDTO.class))).thenReturn(userDTO);
-
-        List<UserDTO> retrievedUsers = userServiceImpl.getAllUsers();
-
-        assertThat(retrievedUsers).hasSize(1);
-        assertThat(retrievedUsers.get(0).getEmail()).isEqualTo(userDTO.getEmail());
+        when(userRepository.findAll()).thenReturn(List.of(user));
+        when(modelMapper.map(user, UserDTO.class)).thenReturn(userDTO);
+        List<UserDTO> users = userServiceImpl.getAllUsers();
+        assertThat(users).hasSize(1);
     }
 
     @Test
-    @DisplayName("Test for finding a non-existing user by ID")
-    public void givenInvalidUserId_whenGetUserById_thenThrowException() {
-        when(userRepository.findById(99L)).thenReturn(Optional.empty());
+    @DisplayName("Get user by ID - success")
+    public void givenUserId_whenGetUserById_thenReturnUserResponseDTO() {
+        when(userRepository.findById(1L)).thenReturn(Optional.of(user));
+        UserResponseDTO response = userServiceImpl.getUserById(1L);
+        assertThat(response.getEmail()).isEqualTo(user.getEmail());
+    }
 
+    @Test
+    @DisplayName("Get user by ID - not found")
+    public void givenInvalidId_whenGetUserById_thenThrowException() {
+        when(userRepository.findById(99L)).thenReturn(Optional.empty());
         assertThrows(UserNotFoundException.class, () -> userServiceImpl.getUserById(99L));
     }
 
     @Test
-    @DisplayName("Test for updating a user")
+    @DisplayName("Get user by email - success")
+    public void givenEmail_whenGetUserByEmail_thenReturnUserResponseDTO() {
+        when(userRepository.findByEmail(user.getEmail())).thenReturn(Optional.of(user));
+        UserResponseDTO result = userServiceImpl.getUserByEmail(user.getEmail());
+        assertThat(result.getEmail()).isEqualTo(user.getEmail());
+    }
+
+    @Test
+    @DisplayName("Update user - success")
     public void givenUserResponseDTO_whenUpdateUser_thenReturnUpdatedUser() {
         when(userRepository.findById(user.getUserId())).thenReturn(Optional.of(user));
         when(userRepository.save(any(User.class))).thenReturn(user);
-
         User updatedUser = userServiceImpl.updateUser(user.getUserId(), userResponseDTO);
-
-        assertThat(updatedUser).isNotNull();
         assertThat(updatedUser.getUsername()).isEqualTo(userResponseDTO.getUsername());
-        verify(userRepository, times(1)).save(any(User.class));
     }
 
     @Test
-    @DisplayName("Test for deleting a user")
-    public void givenUserId_whenDeleteUser_thenRemoveUser() {
+    @DisplayName("Delete user - success")
+    public void givenUserId_whenDeleteUser_thenVerifyDeletion() {
         when(userRepository.findById(user.getUserId())).thenReturn(Optional.of(user));
         doNothing().when(userRepository).delete(user);
-
         userServiceImpl.deleteUser(user.getUserId());
-
-        verify(userRepository, times(1)).delete(user);
+        verify(userRepository).delete(user);
     }
 
     @Test
-    @DisplayName("Test for deleting a non-existing user")
+    @DisplayName("Delete user - not found")
     public void givenInvalidUserId_whenDeleteUser_thenThrowException() {
         when(userRepository.findById(99L)).thenReturn(Optional.empty());
-
         assertThrows(UserNotFoundException.class, () -> userServiceImpl.deleteUser(99L));
     }
 
     @Test
-    @DisplayName("Test for authenticating a user")
-    public void givenValidEmailAndPassword_whenAuthenticateUser_thenReturnAuthResponse() {
-        when(userRepository.findByEmail(userDTO.getEmail())).thenReturn(Optional.of(user));
+    @DisplayName("Authenticate user - success")
+    public void givenValidCredentials_whenAuthenticateUser_thenReturnAuthResponseDTO() {
+        when(userRepository.findByEmail(user.getEmail())).thenReturn(Optional.of(user));
         when(passwordEncoder.matches(anyString(), eq(user.getPassword()))).thenReturn(true);
-
-        var authResponse = userServiceImpl.authenticateUser(userDTO.getEmail(), "Test@123");
-
-        assertThat(authResponse).isNotNull();
-        assertThat(authResponse.getUserName()).isEqualTo(user.getUsername());
-        verify(userRepository, times(1)).findByEmail(userDTO.getEmail());
+        AuthResponseDTO response = userServiceImpl.authenticateUser(user.getEmail(), "Test@123");
+        assertThat(response).isNotNull();
+        assertThat(response.getUserName()).isEqualTo(user.getUsername());
     }
 
     @Test
-    @DisplayName("Test for authenticating a non-existing user")
-    public void givenInvalidEmail_whenAuthenticateUser_thenThrowException() {
-        when(userRepository.findByEmail(userDTO.getEmail())).thenReturn(Optional.empty());
-
-        assertThrows(UserNotFoundException.class, () -> userServiceImpl.authenticateUser(userDTO.getEmail(), "Test@123"));
+    @DisplayName("Authenticate user - invalid password")
+    public void givenInvalidPassword_whenAuthenticateUser_thenThrowException() {
+        when(userRepository.findByEmail(user.getEmail())).thenReturn(Optional.of(user));
+        when(passwordEncoder.matches(anyString(), eq(user.getPassword()))).thenReturn(false);
+        assertThrows(IllegalArgumentException.class, () -> userServiceImpl.authenticateUser(user.getEmail(), "wrongPassword"));
     }
 
     @Test
-    @DisplayName("Test for resetting password for accepted user")
-    public void givenValidEmail_whenResetPassword_thenPasswordResetSuccessful() {
+    @DisplayName("Authenticate user - pending status")
+    public void givenPendingUser_whenAuthenticateUser_thenThrowException() {
+        user.setStatus("PENDING");
+        when(userRepository.findByEmail(user.getEmail())).thenReturn(Optional.of(user));
+        assertThrows(IllegalStateException.class, () -> userServiceImpl.authenticateUser(user.getEmail(), "Test@123"));
+    }
+
+    @Test
+    @DisplayName("Authenticate user - rejected status")
+    public void givenRejectedUser_whenAuthenticateUser_thenThrowException() {
+        user.setStatus("REJECTED");
+        when(userRepository.findByEmail(user.getEmail())).thenReturn(Optional.of(user));
+        assertThrows(IllegalStateException.class, () -> userServiceImpl.authenticateUser(user.getEmail(), "Test@123"));
+    }
+
+    @Test
+    @DisplayName("Reset password - accepted user")
+    public void givenValidUser_whenResetPassword_thenUpdatePassword() {
         when(userRepository.findByEmail(forgotPasswordDTO.getEmail())).thenReturn(Optional.of(user));
         when(passwordEncoder.encode(forgotPasswordDTO.getNewPassword())).thenReturn("encryptedNewPassword");
-        when(userRepository.save(any(User.class))).thenReturn(user);
-
         userServiceImpl.resetPassword(forgotPasswordDTO);
-
         assertThat(user.getPassword()).isEqualTo("encryptedNewPassword");
-        verify(userRepository, times(1)).save(any(User.class));
     }
 
     @Test
-    @DisplayName("Test for resetting password for non-accepted user")
+    @DisplayName("Reset password - not accepted user")
     public void givenNonAcceptedUser_whenResetPassword_thenThrowException() {
         user.setStatus("PENDING");
         when(userRepository.findByEmail(forgotPasswordDTO.getEmail())).thenReturn(Optional.of(user));
-
         assertThrows(IllegalStateException.class, () -> userServiceImpl.resetPassword(forgotPasswordDTO));
+    }
+
+    @Test
+    @DisplayName("Get new users with status PENDING")
+    public void whenGetNewUsers_thenReturnListOfPendingUsers() {
+        when(userRepository.findByStatus("PENDING")).thenReturn(List.of(user));
+        when(modelMapper.map(any(User.class), eq(UserDTO.class))).thenReturn(userDTO);
+        List<UserDTO> newUsers = userServiceImpl.getNewUsers();
+        assertThat(newUsers).hasSize(1);
+    }
+
+    @Test
+    @DisplayName("Update user status")
+    public void givenUserIdAndStatus_whenUpdateUserStatus_thenVerifyUpdate() {
+        when(userRepository.findById(user.getUserId())).thenReturn(Optional.of(user));
+        userServiceImpl.updateUserStatus(user.getUserId(), "REJECTED");
+        assertThat(user.getStatus()).isEqualTo("REJECTED");
+        verify(userRepository, times(1)).save(user);
     }
 }
